add authentication and jwt

--- a/Social/Social.Api/appsettings.json
+++ b/Social/Social.Api/appsettings.json
@@ -1,12 +1,17 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-Q7DB3A5;Database=Social;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+  },
+  "JwtSettings": {
+    "SigningKey": "f5422t6cdfde4ag3bf63dc7d31f80b97",
+    "Issuer": "Social",
+    "Audiences": [ "SwaggerUI" ]
   }
 }
